# maskraft

./: Cargo.toml  README.md
proto/: Cargo.toml
proto/src/: clientbound.rs  datatype.rs  lib.rs  packet.rs  serverbound.rs
proto/src/clientbound/: login.rs  status.rs
proto/src/datatype/: tests.rs
proto/src/serverbound/: handshake.rs  login.rs  status.rs
src/: conn.rs  handler.rs  lib.rs  main.rs  serv.rs
